# usb_port_monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/scripts/: main.py
src/usb_port_monitor/: com_port_funcs.py  main.py
src/usb_port_monitor/gui/: gui_main.py  ui_gui_main.py
src/usb_port_monitor/gui/assets/: gui_main.ui  gui_main_2.ui  theme.json
src/usb_port_monitor/gui/theme/: make_theme.py
