[project]
name = "usb_port_monitor"
description = "A simple USB port monitor"
version = "0.0.0"
requires-python = ">=3.7"
authors = [
    { name = "Ben Osborne", email = "beno3313@gmail.com" }
]

dependencies = [
    "pyserial",
    "PySide6",
    "qt-material",
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]

[project.scripts]
usb_port_monitor = "scripts:main.main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
